Secure OAuth implementation with config loading from properties